--- a/mods/craftable-slimeballs-forge.pw.toml
+++ b/mods/craftable-slimeballs-forge.pw.toml
@@ -3,11 +3,6 @@ filename = "craftable_slimeballs 1.19.2.jar"
 side = "both"
 
 [download]
+url = "https://github.com/VlackdimirVlad/ModpackHail/raw/main/mods/craftable_slimeballs+1.19.2.jar"
 hash-format = "sha1"
 hash = "3fd54a956021b1bf2ce947bb35e36b4c57953521"
-mode = "metadata:curseforge"
-
-[update]
-[update.curseforge]
-file-id = 3945338
-project-id = 663285
