--- a/mods/create-recycle-everything.pw.toml
+++ b/mods/create-recycle-everything.pw.toml
@@ -3,11 +3,6 @@ filename = "create_recycle_1.0.2_forge_1.19.2.jar"
 side = "both"
 
 [download]
+url = "https://github.com/VlackdimirVlad/ModpackHail/raw/main/mods/create_recycle_1.0.2_forge_1.19.2.jar"
 hash-format = "sha1"
 hash = "c00d598e41fcf1d30940b866f84a7cc2bb9dea29"
-mode = "metadata:curseforge"
-
-[update]
-[update.curseforge]
-file-id = 4714432
-project-id = 872577
